--- a/A_dbms/templates/dbms/article/article-add.html
+++ b/A_dbms/templates/dbms/article/article-add.html
@@ -3,7 +3,7 @@
 {% block title %}添加项目{% endblock %}
 
 {% block right-content-container %}
-    <div class="container">
+    <div class="container" style="padding-right: 15px">
         <h2>添加项目</h2>
         <form class="form-horizontal"
               action="{% url 'dbms:article_add' %}"
