--- a/A_dbms/templates/dbms/meeting/article/detail/present.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/present.html
@@ -1,17 +1,17 @@
 <ul class="nav nav-tabs"
     role="tablist"
     style="background-color: #f5f5f5">
-    <li role="presentation" class="active">
-        <a href="#expert"
-           style="background-color: #f5f5f5"
-           aria-controls="profile"
-           role="tab"
-           data-toggle="tab">
-            评审委员
-        </a>
-    </li>
+{#    <li role="presentation" class="active">#}
+{#        <a href="#expert"#}
+{#           style="background-color: #f5f5f5"#}
+{#           aria-controls="profile"#}
+{#           role="tab"#}
+{#           data-toggle="tab">#}
+{#            评审委员#}
+{#        </a>#}
+{#    </li>#}
 
-    <li role="presentation">
+    <li role="presentation" class="active">
         <a href="#comment"
            style="background-color: #f5f5f5"
            aria-controls="profile"
