--- a/A_dbms/templates/dbms/meeting/scan/tab/present.html
+++ b/A_dbms/templates/dbms/meeting/scan/tab/present.html
@@ -16,7 +16,7 @@
            aria-controls="messages"
            role="tab"
            data-toggle="tab">
-            参会委员
+            参会评委
         </a>
     </li>
 </ul>
