--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -1,5 +1,14 @@
-{% if agree_obj.agree_typ == 2 %}
-    {% include 'dbms/board/maximum-ensure.html' %}
-{% elif agree_obj.agree_typ == 1 %}
-    {% include 'dbms/board/single-ensure.html' %}
-{% endif %}
+{% extends 'dbms/index_dbms.html' %}
+
+{% block title %}编辑项目{% endblock %}
+
+{% block right-content-container %}
+
+    <div class="container-fluid" style="padding-left: 1px;">
+        {% include 'dbms/agree/scan/summry.html' %}
+
+        {% include 'dbms/agree/scan/nav_tab.html' %}
+
+    </div>
+
+{% endblock %}
