--- a/A_dbms/templates/dbms/agree/scan/summry.html
+++ b/A_dbms/templates/dbms/agree/scan/summry.html
@@ -3,60 +3,54 @@
         <label>项目情况</label>
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm"
-               href="{% url 'dbms:meeting_allot' meeting_id=meeting_id article_id=article_id %}">
-                分配评委
+               href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">
+                预览
             </a>
-            <a class="btn btn-primary btn-sm "
-               href="#">
-                评审意见
+            <a class="btn btn-danger btn-sm "
+               href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">
+                删除
             </a>
-            <a class="btn btn-primary btn-sm "
-               href="#">
-                单项额度
-            </a>
-            <button class="btn btn-danger btn-sm ">
-                取消上会
-            </button>
         </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            客户名称：{{ article_obj.custom }}
+            合同编号：{{ agree_obj.agree_num }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目编号：{{ article_obj.article_num }}
+            客户名称：{{ agree_obj.article.custom.name }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审编号：{{ meeting_obj.num }}
+            放款银行：{{ agree_obj.branch.name }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            申请金额：{{ article_obj.amount }}
+            合同金额：{{ agree_obj.agree_amount }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            续贷金额：{{ article_obj.renewal }}
+            合同种类：{{ agree_obj.get_agree_typ_display }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            新增金额：{{ article_obj.augment }}
+            合同状态：{{ agree_obj.get_agree_state_display }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目经理：{{ article_obj.director.name }}
+            纪要编号：{{ agree_obj.article.summary_num }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目助理：{{ article_obj.assistant.name }}
+            项目编号：{{ agree_obj.article.article_num }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            风控专员：{{ article_obj.control.name }}
+            项目金额：{{ agree_obj.article.amount }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            担保期限：{{ article_obj.credit_term }}个月
+            担保期限(月)：{{ agree_obj.article.credit_term }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            提交日期：{{ article_obj.article_date }}
+            项目经理：{{ agree_obj.article.director.name }}
+        </label>
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目状态：{{ article_obj.get_article_state_display }}
+            签批日期：{{ agree_obj.article.sign_date }}
         </label>
+
     </div>
 </div>
-
