--- a/A_dbms/templates/dbms/meeting/article/detail/content.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/content.html
@@ -1,12 +1,12 @@
 <div class="tab-content">
-    <div role="tabpanel"
-         class="tab-pane active"
-         id="expert"><!--评审委员-->
-        {% include 'dbms/meeting/article/detail/content/experts.html' %}
-    </div>
+    {#    <div role="tabpanel"#}
+    {#         class="tab-pane active"#}
+    {#         id="expert"><!--评审委员-->#}
+    {#        {% include 'dbms/meeting/article/detail/content/experts.html' %}#}
+    {#    </div>#}
 
     <div role="tabpanel"
-         class="tab-pane"
+         class="tab-pane active"
          id="comment"><!--评审意见-->
         {% include 'dbms/meeting/article/detail/content/comment.html' %}
     </div>
