--- a/A_dbms/templates/dbms/meeting/meeting-scan.html
+++ b/A_dbms/templates/dbms/meeting/meeting-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}编辑项目{% endblock %}
+{% block title %}项目评审{% endblock %}
 
 {% block right-content-container %}
 
