--- a/A_dbms/templates/dbms/meeting/meeting.html
+++ b/A_dbms/templates/dbms/meeting/meeting.html
@@ -5,4 +5,9 @@
 {% block right-content-container %}
     {% include 'dbms/meeting/meeting/filter.html' %}
     {% include 'dbms/meeting/meeting/table.html' %}
+    {% include 'dbms/meeting/mod_form/add-meeting-mod.html' %}
 {% endblock %}{#--{% block body %}#}
+
+{% block extra-js %}
+    {% include 'dbms/meeting/meeting/extra-js.html' %}
+{% endblock %}
