--- a/A_dbms/templates/dbms/meeting/meeting/extra-js.html
+++ b/A_dbms/templates/dbms/meeting/meeting/extra-js.html
@@ -2,8 +2,42 @@
     $(function () {
         bindaddMeeting();
         bindaddMeetingModalOk();
-
     });
+
+    function bindaddMeetingModalOk() {
+        $('#addMeetingModalOk').click(function () {
+            var review_model = $('#id_review_model').val();
+            var review_date = $('#id_review_date').val();
+            var articles = $('#id_article').val();
+            console.log(review_model);
+            console.log(review_date);
+            console.log(articles);
+            console.log('bindaddMeetingModalOk');
+            var postData = {};
+            $('#addMeetingModal').find('input,select').each(function () {
+                console.log($(this)[0]);
+                console.log(this);
+                var v = $(this).val();
+                var n = $(this).attr('name');
+                console.log(v);
+                console.log(n);
+                postData[n] = v;
+                console.log(postData);
+            });
+
+
+            $.ajax({
+                url: '/dbms/meeting/add-ajax/',
+                traditional: true,
+                type: 'POST',
+                data: postData,
+                success: function (arg) {
+                    console.log(arg)
+                    {#alert(arg)#}
+                }
+            })
+        })
+    }
 
     function bindaddMeeting() {
         $('#addMeeting').click(function () {
@@ -12,45 +46,6 @@
         })
     }
 
-    function bindaddMeetingModalOk() {
-        $('#addMeetingModalOk').click(function () {
-            var review_model = $('#id_review_model').val();
-            var review_date = $('#id_review_date').val();
-            var articles = $('#id_article').val();
-            console.log(review_model)
-            console.log(review_date)
-            console.log(articles)
-            console.log('bindaddMeetingModalOk')
-        })
-    }
 </script>
-
-
-<!-- script -->
-<script>
-    function submitForm() {
-        {#alert('hello!')#}
-        var review_model = $('#id_review_model').val();
-        var review_date = $('#id_review_date').val();
-        var articles = $('#id_article').val();
-        $.ajax({
-            url: '/dbms/meeting/add-ajax/',
-            traditional: true,
-            type: 'POST',
-            data: {
-                review_model: review_model,
-                review_date: review_date,
-                articles: articles
-            },
-            success: function (arg) {
-                console.log(arg)
-                {#alert(arg)#}
-            }
-        })
-    }
-
-</script>
-
-
 
 
