--- a/A_dbms/templates/dbms/article/article-edit.html
+++ b/A_dbms/templates/dbms/article/article-edit.html
@@ -9,7 +9,10 @@
               action="{% url 'dbms:article_edit' article_id=article_obj.id %}"
               method="post"> {% csrf_token %}
 
-            {% include 'dbms/article/article/from_add_edit.html' %}
+            {% include 'dbms/article/modl/mod_form/article-add-edit.html' %}
+
+            <input class="active btn btn-primary btn-sm"
+                   type="submit" value="提交">
 
         </form>
     </div>
