--- a/A_dbms/templates/dbms/article/article-scan.html
+++ b/A_dbms/templates/dbms/article/article-scan.html
@@ -3,12 +3,15 @@
 {% block title %}编辑项目{% endblock %}
 
 {% block right-content-container %}
-
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/article/scan/summry.html' %}
-
         {% include 'dbms/article/scan/nav_tab.html' %}
-
+        {% include 'dbms/article/modl/edit-article-mod.html' %}
+        {% include 'dbms/article/modl/del-article-mod.html' %}
     </div>
+{% endblock %}
 
+{% block extra-js %}
+    {% include 'dbms/article/extra/js-edit-article.html' %}
+    {% include 'dbms/article/extra/js-del-article.html' %}
 {% endblock %}
