--- a/A_dbms/templates/dbms/article/article.html
+++ b/A_dbms/templates/dbms/article/article.html
@@ -4,12 +4,11 @@
 
 
 {% block right-content-container %}
-{#    <div class="container-fluid" style="padding-left: 1px;">#}
-{#        <div class="panel panel-default">#}
-{#            <div class="panel-body row">#}
-                {% include 'dbms/article/article/filter.html' %}
-                {% include 'dbms/article/article/table.html' %}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
+    {% include 'dbms/article/article/filter.html' %}
+    {% include 'dbms/article/article/table.html' %}
+    {% include 'dbms/article/modl/add-article-mod.html' %}
+{% endblock %}
+
+{% block extra-js %}
+    {% include 'dbms/article/extra/js-add-article.html' %}
 {% endblock %}
