--- a/A_dbms/templates/dbms/article/article/filter.html
+++ b/A_dbms/templates/dbms/article/article/filter.html
@@ -1,46 +1,44 @@
 <div>
-    {% if kwargs.article_state == None %}
-        <a class="active btn btn-primary btn-sm"
-           href="{% url 'dbms:article_all' %}">全部</a>
-    {% else %}
-        <a class="btn btn btn-primary btn-sm"
-           href="{% url 'dbms:article_all' %}">全部</a>
-    {% endif %}
-
-    {# 方式一：#}
-    {% for item in article_state_list_dic %}
-        {% if item.id == kwargs.article_state %}
+    <label>
+        {% if kwargs.article_state == None %}
             <a class="active btn btn-primary btn-sm"
-               href="{% url 'dbms:article' article_state=item.id %}">
-                {{ item.name }}
-            </a>
+               href="{% url 'dbms:article_all' %}">全部</a>
         {% else %}
-            <a class="btn btn-primary btn-sm"
-               href="{% url 'dbms:article' article_state=item.id %}">
-                {{ item.name }}
-            </a>
+            <a class="btn btn btn-primary btn-sm"
+               href="{% url 'dbms:article_all' %}">全部</a>
         {% endif %}
-    {% endfor %}
-    <span style="display: inline">
+
+        {# 方式一：#}
+        {% for item in article_state_list_dic %}
+            {% if item.id == kwargs.article_state %}
+                <a class="active btn btn-primary btn-sm"
+                   href="{% url 'dbms:article' article_state=item.id %}">
+                    {{ item.name }}
+                </a>
+            {% else %}
+                <a class="btn btn-primary btn-sm"
+                   href="{% url 'dbms:article' article_state=item.id %}">
+                    {{ item.name }}
+                </a>
+            {% endif %}
+        {% endfor %}
+    </label>
+    <label>
         <form class="navbar-form"
               style="display: inline">
             <input type="text" class="form-control" placeholder="搜索客户或项目经理">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
-    </span>
-    <span>
-        <a class="btn btn-success btn-sm pull-right"
-           href="{% url 'dbms:article_add' %}">添加项目
+    </label>
+    <label class="pull-right">
+        <a class="btn btn-success btn-sm"
+           href="{% url 'dbms:article_add' %}">/添加项目/
         </a>
-    </span>
 
-    <span class="btn btn-success btn-sm pull-right"
-          data-toggle="modal" data-target="#articleAddModal">
-        添加项目
-    </span>
+        <a class="btn btn-success btn-sm" id="articleAdd">
+            添加项目
+        </a>
+    </label>
 </div>
 
-
-<!-- Modal -->
-{% include 'dbms/article/article/filter/mod.html' %}
 
