--- a/A_dbms/templates/dbms/agree/scan/summry.html
+++ b/A_dbms/templates/dbms/agree/scan/summry.html
@@ -3,6 +3,7 @@
         <label>项目情况</label>
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm"
+               target="_blank"
                href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">
                 预览
             </a>
