--- a/A_dbms/templates/dbms/meeting/modl/del-meeting-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/del-meeting-mod.html
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="delMeetingModalLabel">
-                    取消评审会<input style="display: none" id="meetingId" value="{{ meeting_obj.id }}">
+                    取消评审会<input style="display: none" id="meetingDelId" value="{{ meeting_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
