--- a/A_dbms/templates/dbms/article/modl/add-article-mod.html
+++ b/A_dbms/templates/dbms/article/modl/add-article-mod.html
@@ -1,5 +1,5 @@
-<div class="modal fade" id="articleAddModal" tabindex="-1"
-     role="dialog" aria-labelledby="articleAddModalLabel">
+<div class="modal fade" id="addArticleModal" tabindex="-1"
+     role="dialog" aria-labelledby="addArticleModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,7 +7,7 @@
                         data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="articleAddModalLabel">
+                <h4 class="modal-title" id="addArticleModalLabel">
                     添加项目
                 </h4>
             </div>
@@ -18,13 +18,19 @@
                 </form>
 
             </div>
+
+
+            <label id="formErrors">
+            </label>
+
+
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
                         data-dismiss="modal">
                     取消
                 </button>
                 <button type="button" class="btn btn-primary"
-                        id="articleAddModalOk">
+                        id="addArticleModalOk">
                     添加
                 </button>
             </div>
