--- a/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
+++ b/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
@@ -1,74 +1,83 @@
-<div class="row" style="padding-right:10px">
-    <div class="form-group">
-        <label for="id_custom_id" class="col-sm-3 control-label">
-            {{ form.custom_id.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.custom_id }}
-        </div>
-        <label>{{ form.custom_id.errors }}</label>
+<div class="form-group"><!--项目id-->
+    <label for="id_custom_id" class="col-sm-3 control-label">
+        {{ form.custom_id.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form.custom_id }}
     </div>
-    <div class="form-group">
-        <label for="id_renewal" class="col-sm-3 control-label">
-            {{ form.renewal.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.renewal }}
-        </div>
-        <label>{{ form.renewal.errors }}</label>
+    <label id="e_custom_id" class="pull-right">
+        {{ forme.custom_id.errors }}
+    </label>
+</div>
+
+<div class="form-group"><!--续贷金额-->
+    <label for="id_renewal" class="col-sm-3 control-label">
+        {{ form.renewal.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form.renewal }}
     </div>
-    <div class="form-group">
-        <label for="id_augment" class="col-sm-3 control-label">
-            {{ form.augment.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.augment }}
-        </div>
-        <label>{{ form.augment.errors }}</label>
+    <label id="e_renewal" class="pull-right">
+        {{ form.renewal.errors }}
+    </label>
+</div>
+
+<div class="form-group"><!--新增金额-->
+    <label for="id_augment" class="col-sm-3 control-label">
+        {{ form.augment.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form.augment }}
     </div>
-    <div class="form-group">
-        <label for="id_credit_term" class="col-sm-3 control-label">
-            {{ form.credit_term.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.credit_term }}
-        </div>
-        <label>{{ form.credit_term.errors }}</label>
+    <label id="e_augment" class="pull-right">
+        {{ form.augment.errors }}
+    </label>
+</div>
+
+<div class="form-group"><!--授信期限-->
+    <label for="id_credit_term" class="col-sm-3 control-label">
+        {{ form.credit_term.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form.credit_term }}
     </div>
-    <div class="form-group">
-        <label for="id_director_id" class="col-sm-3 control-label">
-            {{ form.director_id.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.director_id }}
-        </div>
-        <label>{{ form.director_id.errors }}</label>
+    <label id="e_credit_term" class="pull-right">
+        {{ form.credit_term.errors }}
+    </label>
+</div>
+
+<div class="form-group"><!--项目经理id-->
+    <label for="id_director_id" class="col-sm-3 control-label">
+        {{ form.director_id.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form.director_id }}
     </div>
-    <div class="form-group">
-        <label for="id_assistant_id" class="col-sm-3 control-label">
-            {{ form.assistant_id.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.assistant_id }}
-        </div>
-        <label>{{ form.assistant_id.errors }}</label>
+    <label id="e_director_id" class="pull-right">
+        {{ form.director_id.errors }}
+    </label>
+</div>
+
+<div class="form-group"><!--项目助理id-->
+    <label for="id_assistant_id" class="col-sm-3 control-label">
+        {{ form.assistant_id.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form.assistant_id }}
     </div>
-    <div class="form-group">
-        <label for="id_control_id" class="col-sm-3 control-label">
-            {{ form.control_id.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.control_id }}
-        </div>
-        <label>{{ form.control_id.errors }}</label>
+    <label id="e_assistant_id" class="pull-right">
+        {{ form.assistant_id.errors }}
+    </label>
+</div>
+
+<div class="form-group"><!--风控专员id-->
+    <label for="id_control_id" class="col-sm-3 control-label">
+        {{ form.control_id.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form.control_id }}
     </div>
-    <div class="form-group">
-        <label for="id_article_date" class="col-sm-3 control-label">
-            {{ form.article_date.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form.article_date }}
-        </div>
-        <label>{{ form.article_date.errors }}</label>
-    </div>
+    <label id="e_control_id" class="pull-right">
+        {{ form.control_id.errors }}
+    </label>
 </div>
