--- a/A_dbms/templates/dbms/article/scan/summry.html
+++ b/A_dbms/templates/dbms/article/scan/summry.html
@@ -2,10 +2,10 @@
     <div class="panel-heading">
         <label>项目情况</label>
         <label class="navbar-right">
-            <a class="btn btn-danger btn-sm"
+            <!--<a class="btn btn-danger btn-sm"
                href="{% url 'dbms:article_edit' article_id=article_obj.id %}">
                 /修改项目/
-            </a>
+            </a>-->
             <a class="btn btn-danger btn-sm " id="editArticle">
                 修改项目
             </a><!--#path('article/del/'-->
