--- a/A_dbms/templates/dbms/meeting/modl/mod_form/meeting-add-edit.html
+++ b/A_dbms/templates/dbms/meeting/modl/mod_form/meeting-add-edit.html
@@ -1,26 +1,35 @@
-<div class="form-group">
+<div class="form-group"> <!--评审类型-->
     <label for="id_review_model" class="col-sm-3 control-label">
         {{ form.review_model.label }}：
     </label>
     <div class="col-sm-9">
         {{ form.review_model }}
     </div>
+    <label id="e_review_model" class="pull-right">
+        {{ form.review_model.errors }}
+    </label>
 </div>
 
-<div class="form-group">
+<div class="form-group"><!--评审日期-->
     <label for="id_review_date" class="col-sm-3 control-label">
         {{ form.review_date.label }}：
     </label>
     <div class="col-sm-9">
         {{ form.review_date }}
     </div>
+    <label id="e_review_date" class="pull-right">
+        {{ form.review_date.errors }}
+    </label>
 </div>
 
-<div class="form-group">
+<div class="form-group"><!--参会项目-->
     <label for="id_article" class="col-sm-3 control-label">
         {{ form.article.label }}：
     </label>
     <div class="col-sm-9">
         {{ form.article }}
     </div>
+    <label id="e_article" class="pull-right">
+        {{ form.article.errors }}
+    </label>
 </div>
